# algopattern

./: LICENSE  README.md
UML/: README.md  crtp.dia  functional.dia  policies.dia  strategy.dia
cpp/: CMakeLists.txt  code.h  crtp.cpp  functional.cpp  policies.cpp  strategy.cpp
java/: Point.java
java/crtp/: Algo.java  Neighborhood.java  OctoGrid.java  QuadGrid.java  Transit.java  TransitInSimplex.java  TransitOnEdge.java
java/functionnal/: Algo.java  Neighborhood.java  Transit.java  TriFunction.java
java/strategy/: Algo.java  Neighborhood.java  OctoGrid.java  QuadGrid.java  Transit.java  TransitInSimplex.java  TransitOnEdge.java
python/: code.py  functional.py  strategy.py
